# tick

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md
.claude/: settings.local.json
.claude/skills/tick-agent/: SKILL.md
docs/superpowers/plans/: 2026-04-14-phase1.md  2026-04-14-phase2.md
docs/superpowers/specs/: 2026-04-14-phase1-design.md  2026-04-14-phase2-design.md
migrations/: 001_init.sql  002_fts.sql
src/: error.rs  lib.rs  main.rs  validators.rs
src/cli/: comment.rs  config.rs  issue.rs  mod.rs
src/commands/: comment.rs  config.rs  init.rs  issue.rs  mod.rs
src/db/: comments.rs  config.rs  issues.rs  links.rs  migrate.rs  mod.rs
src/models/: comment.rs  issue.rs  mod.rs
src/output/: json.rs  pretty.rs
tests/: cli_tests.rs  db_tests.rs
