[package]
name = "tick"
version = "0.1.0"
edition = "2021"
description = "Local Agent-First Issue Tracker"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
assert-json-diff = "2"
